@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <groupId>edu.internet2.middleware</groupId>
     <artifactId>shibboleth-identityprovider</artifactId>
     <version>2.3.0-SNAPSHOT</version>
-    
+
     <!-- We bundle as a jar here, the installer creates the WAR -->
     <packaging>jar</packaging>
 
@@ -15,31 +15,29 @@
         The Shibboleth Identity Provider is used by an organization to securely assert information, via SAML, about
         their users.  This information is then read and acted upon by Service Providers.
     </description>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <xerces.groupId>org.apache.xerces</xerces.groupId>
         <xerces.version>2.10.0</xerces.version>
     </properties>
-    
+
     <repositories>
         <repository>
-            <id>shibboleth.internet2.edu</id>
-            <name>Internet2</name>
-            <layout>default</layout>
-            <url>http://shibboleth.internet2.edu/downloads/maven2</url>
+            <id>shib-release</id>
+            <url>https://shibboleth.net/nexus/content/groups/public</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-    </repositories>
-    
-    <distributionManagement>
         <repository>
-            <id>release-repo</id>
-            <url>${dist.release.url}</url>
+            <id>shib-snapshot</id>
+            <url>https://shibboleth.net/nexus/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </repository>
-    </distributionManagement>
+    </repositories>
 
     <dependencies>
         <!-- Compile dependencies -->
@@ -48,7 +46,7 @@
             <artifactId>shibboleth-common</artifactId>
             <version>1.3.0</version>
         </dependency>
-        
+
         <!-- Provided dependencies -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -60,7 +58,7 @@
             <artifactId>jsp-api</artifactId>
             <version>2.0</version>
         </dependency>
-                
+
         <!-- Runtime dependencies -->
         <dependency>
             <groupId>${xerces.groupId}</groupId>
@@ -75,19 +73,13 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>${xerces.groupId}</groupId>
-            <artifactId>resolver</artifactId>
-            <version>${xerces.version}</version>
+            <groupId>xml-resolver</groupId>
+            <artifactId>xml-resolver</artifactId>
+            <version>1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>${xerces.groupId}</groupId>
-            <artifactId>serializer</artifactId>
-            <version>${xerces.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.xalan</groupId>
+            <groupId>xalan</groupId>
             <artifactId>xalan</artifactId>
             <version>2.7.1</version>
             <scope>runtime</scope>
@@ -128,7 +120,7 @@
             <version>1.1.0</version>
             <scope>runtime</scope>
         </dependency>
-        
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
@@ -155,19 +147,24 @@
             </exclusions>
         </dependency>
     </dependencies>
-    
+
+    <distributionManagement>
+        <repository>
+            <id>release</id>
+            <url>https://shibboleth.net/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshot</id>
+            <url>https://shibboleth.net/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -177,6 +174,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.1</version>
                 <configuration>
                     <descriptors>
                         <descriptor>src/main/assembly/bin.xml</descriptor>
@@ -196,13 +194,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.8</version>
                 <configuration>
-                  <argLine>-Xmx256m</argLine>
+                    <argLine>-Xmx256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
                 <configuration>
                     <archive>
                         <index>true</index>
@@ -222,6 +222,34 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.1.2</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <quiet>true</quiet>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -234,7 +262,7 @@
                     <links>
                         <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
                         <link>http://joda-time.sourceforge.net/apidocs/</link>
-                        <link>http://static.springsource.org/spring/docs/2.0.x/api/</link> 
+                        <link>http://static.springsource.org/spring/docs/2.0.x/api/</link>
                     </links>
                     <quiet>true</quiet>
                     <author>false</author>
@@ -251,7 +279,7 @@
                     <outputDirectory>${project.reporting.outputDirectory}/xref</outputDirectory>
                     <doctitle>${project.name} ${project.version} Code Cross-Reference</doctitle>
                     <windowtitle>${project.name} ${project.version} Java API.</windowtitle>
-                    <javadocDir>${project.reporting.outputDirectory}/apidocs</javadocDir>                    
+                    <javadocDir>${project.reporting.outputDirectory}/apidocs</javadocDir>
                 </configuration>
             </plugin>
             <plugin>
@@ -264,15 +292,12 @@
             </plugin>
         </plugins>
     </reporting>
-    
+
     <profiles>
         <profile>
             <id>release</id>
             <build>
                 <plugins>
-                    <plugin>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
@@ -337,16 +362,16 @@
                             </execution>
                         </executions>
                     </plugin>
-                </plugins>    
-            </build>            
+                </plugins>
+            </build>
         </profile>
     </profiles>
-    
+
     <!-- Project Metadata -->
     <url>http://shibboleth.internet2.edu/</url>
-    
+
     <inceptionYear>2006</inceptionYear>
-    
+
     <licenses>
         <license>
             <name>Apache 2</name>
@@ -354,17 +379,17 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
-    
+
     <organization>
         <name>Internet2</name>
         <url>http://www.internet2.edu/</url>
     </organization>
-    
+
     <issueManagement>
         <system>JIRA</system>
         <url>http://bugs.internet2.edu/</url>
     </issueManagement>
-    
+
     <mailingLists>
         <mailingList>
             <name>Shibboleth Announce</name>
@@ -388,14 +413,14 @@
             <archive>https://mail.internet2.edu/wws/arc/shibboleth-dev</archive>
         </mailingList>
     </mailingLists>
-    
+
     <scm>
         <connection>scm:svn:https://svn.middleware.georgetown.edu/java-idp/</connection>
         <developerConnection>scm:svn:https://svn.middleware.georgetown.edu/java-idp/</developerConnection>
         <tag>HEAD</tag>
         <url>http://svn.middleware.georgetown.edu/view/?root=java-idp</url>
     </scm>
-    
+
     <developers>
         <developer>
             <id>cantor</id>
@@ -449,5 +474,5 @@
             <timezone>0</timezone>
         </developer>
     </developers>
-    
+
 </project>
