@@ -11,7 +11,9 @@
             <outputDirectory>/lib</outputDirectory>
             <excludes>
                 <exclude>org.apache.xerces:*</exclude>
-                <exclude>org.apache.xalan:*</exclude>
+                <exclude>xalan:*</exclude>
+                <exclude>xml-resolver:*</exclude>
+                <exclude>xml-apis:</exclude>
                 <exclude>org.apache.ant:*</exclude>
                 <exclude>ant-contrib:*</exclude>
                 <exclude>edu.internet2.middleware:ant-extensions:*</exclude>
@@ -33,7 +35,8 @@
             <outputDirectory>/endorsed</outputDirectory>
             <includes>
                 <include>org.apache.xerces:*</include>
-                <include>org.apache.xalan:*</include>
+                <include>xalan:*</include>
+                <include>xml-resolver:*</include>
             </includes>
         </dependencySet>
     </dependencySets>
